# fruittools

./: Cargo.toml  README.md  mise.toml
.forgejo/workflows/: checks.yml  test.yml
.github/workflows/: rust-clippy.yml  rust.yml
bananen/: Cargo.toml
bananen/src/: lib.rs  main.rs
bananen/src/moderators/: mod.rs
bananen/src/operations/: mod.rs
codegen/: gleam.toml  manifest.toml
codegen/birdie_snapshots/: long_and_multiple_comment_generation.accepted  long_and_multiple_doc_comment_generation.accepted  single_comment_generation.accepted  single_doc_comment_generation.accepted
codegen/src/: codegen.gleam
codegen/src/codegen/: internal.gleam  pulp.gleam
codegen/src/codegen/internal/: comments.gleam
codegen/test/: codegen_test.gleam
fruittools-cli/: README.md  gleam.toml  manifest.toml
fruittools-cli/src/: fruittools_cli.gleam
fruittools-commons/: README.md  gleam.toml  manifest.toml
fruittools-commons/src/fruittools_commons/: directresponse.gleam
fruittools-dmn/: README.md  gleam.toml
fruittools-dmn/src/: fruittools_dmn.gleam
fruittools-lib/: README.md  gleam.toml
fruittools-lib/src/fruittools_commons/: directresponse.gleam
fruittools_shared/: Cargo.toml
fruittools_shared/src/: lib.rs
pulp/: Cargo.toml
pulp/src/: lib.rs  tests.rs  toolchains.rs
src/: main.rs
src/utils/: echo.rs  mod.rs
