[package]
name = "fruittools"
description = "A collection of tools, utilities and libraries by Mar @strawmelonjuice"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "fruittools"
path = "./src/main.rs"
[[bin]]
name = "bananen"
path = "./bananen/src/main.rs"
[[bin]]
name = "pulp"
path = "./pulp/src/main.rs"


[workspace]
members = ["bananen", "pulp"]

[workspace.package]
edition = "2024"
authors = ["MLC Bloeiman <mar@strawmelonjuice.com>"]
repository = "https://codeberg.org/strawmelonjuice/fruittools"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://strawmelonjuice.com/?p=projects/fruittools"
keywords = ["cli", "changelogs", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
bananen = { path = "./bananen" }
pulp = { path = "./pulp/" }
