[package]
name = "bananen"
description = "CLI changelog generator written in Rust"
version = "0.2.0"
edition = "2024"
authors = ["MLC Bloeiman <mar@strawmelonjuice.com>"]
repository = "https://github.com/strawmelonjuice/bananen/"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://strawmelonjuice.com/?p=projects/bananen"
keywords = ["cli", "changelogs", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
cynthia_con = { workspace = true }
serde = { version = "1.0.104", features = ["derive"] }
